fixed the spacing for top suite

--- a/src/style.css
+++ b/src/style.css
@@ -180,6 +180,7 @@ h2 {
 }
 
 .top {
+  padding-top: 4%;
   flex: 1;
   flex-direction: column;
   align-items: stretch;
